update error page

--- a/src/404.html
+++ b/src/404.html
@@ -1,127 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Openpay Nothing found</title>
-  <meta name="description" content="Openpay Welcome to a smarter way to pay" />
-  <!-- Google Tag Manager -->
-  <script>
-    (function (w, d, s, l, i) {
-      w[l] = w[l] || [];
-      w[l].push({
-        'gtm.start': new Date().getTime(),
-        event: 'gtm.js'
-      });
-      var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s),
-        dl = l != 'dataLayer' ? '&l=' + l : '';
-      j.async = true;
-      j.src =
-        'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-      f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-NH9RBKG');
-  </script>
-
-  <!-- 	FullStory Snippet -->
-  <script>
-    window["_fs_debug"] = false;
-    window["_fs_host"] = "fullstory.com";
-    window["_fs_org"] = "D6N17";
-    window["_fs_namespace"] = "FS";
-    (function (m, n, e, t, l, o, g, y) {
-      if (e in m) {
-        if (m.console && m.console.log) {
-          m.console.log(
-            'FullStory namespace conflict. Please set window["_fs_namespace"].'
-          );
-        }
-        return;
-      }
-      g = m[e] = function (a, b) {
-        g.q ? g.q.push([a, b]) : g._api(a, b);
-      };
-      g.q = [];
-      o = n.createElement(t);
-      o.async = 1;
-      o.src = "https://" + _fs_host + "/s/fs.js";
-      y = n.getElementsByTagName(t)[0];
-      y.parentNode.insertBefore(o, y);
-      g.identify = function (i, v) {
-        g(l, {
-          uid: i
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon/favicon-16x16.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Openpay Nothing found</title>
+    <meta
+      name="description"
+      content="Openpay Welcome to a smarter way to pay"
+    />
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+          "gtm.start": new Date().getTime(),
+          event: "gtm.js"
         });
-        if (v) g(l, v);
-      };
-      g.setUserVars = function (v) {
-        g(l, v);
-      };
-      g.shutdown = function () {
-        g("rec", !1);
-      };
-      g.restart = function () {
-        g("rec", !0);
-      };
-      g.consent = function (a) {
-        g("consent", !arguments.length || a);
-      };
-      g.identifyAccount = function (i, v) {
-        o = "account";
-        v = v || {};
-        v.acctId = i;
-        g(o, v);
-      };
-      g.clearUserCookie = function () {};
-    })(window, document, window["_fs_namespace"], "script", "user");
-  </script>
-  <link rel="stylesheet" href="./css/404_uk.css?20190517" />
-</head>
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NH9RBKG");
+    </script>
 
-<body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <div class="header-wrap block-wap">
-    <header class="header block-child-wrap">
-      <div class="header-logo-and-trigger">
-        <a href="/" class="logo-link">
-          <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
-        </a>
-        <div class="trigger-menu">
-          <div class="trigger-menu__line"></div>
+    <!-- 	FullStory Snippet -->
+    <script>
+      window["_fs_debug"] = false;
+      window["_fs_host"] = "fullstory.com";
+      window["_fs_org"] = "D6N17";
+      window["_fs_namespace"] = "FS";
+      (function(m, n, e, t, l, o, g, y) {
+        if (e in m) {
+          if (m.console && m.console.log) {
+            m.console.log(
+              'FullStory namespace conflict. Please set window["_fs_namespace"].'
+            );
+          }
+          return;
+        }
+        g = m[e] = function(a, b) {
+          g.q ? g.q.push([a, b]) : g._api(a, b);
+        };
+        g.q = [];
+        o = n.createElement(t);
+        o.async = 1;
+        o.src = "https://" + _fs_host + "/s/fs.js";
+        y = n.getElementsByTagName(t)[0];
+        y.parentNode.insertBefore(o, y);
+        g.identify = function(i, v) {
+          g(l, {
+            uid: i
+          });
+          if (v) g(l, v);
+        };
+        g.setUserVars = function(v) {
+          g(l, v);
+        };
+        g.shutdown = function() {
+          g("rec", !1);
+        };
+        g.restart = function() {
+          g("rec", !0);
+        };
+        g.consent = function(a) {
+          g("consent", !arguments.length || a);
+        };
+        g.identifyAccount = function(i, v) {
+          o = "account";
+          v = v || {};
+          v.acctId = i;
+          g(o, v);
+        };
+        g.clearUserCookie = function() {};
+      })(window, document, window["_fs_namespace"], "script", "user");
+    </script>
+    <link rel="stylesheet" href="./css/404_uk.css?20190517" />
+  </head>
+
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NH9RBKG"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <div class="header-wrap block-wap">
+      <header class="header block-child-wrap">
+        <div class="header-logo-and-trigger">
+          <a href="/" class="logo-link">
+            <img
+              src="./images/logo-black.svg"
+              alt="Openpay Logo"
+              class="logo"
+            />
+          </a>
+          <div class="trigger-menu">
+            <div class="trigger-menu__line"></div>
+          </div>
         </div>
-      </div>
-      <nav class="header-nav header-nav_disable">
-        <ul class="nav-list">
-          <li>
-            <a href="/works" class="paragraphSpec-4">How it works</a>
-          </li>
-          <li>
-            <a href="/business" class="paragraphSpec-4">I'm a business</a>
-          </li>
-          <li>
-            <a href="/contact" class="paragraphSpec-4">Contact us</a>
-          </li>
-        </ul>
-      </nav>
-      </nav>
-    </header>
-  </div>
-
-  <section class="hero">
-    <div class="block-child-wrap">
-      <h1 class="hero__title">Page not found.</h1>
-      <p class="hero__text">The above error occurred while the Web server was processing your request.</p>
-      <a href="/" class="hero__btn">Go to home page</a>
+        <nav class="header-nav header-nav_disable">
+          <ul class="nav-list">
+            <li>
+              <a href="/works" class="paragraphSpec-4">How it works</a>
+            </li>
+            <li>
+              <a href="/business" class="paragraphSpec-4">I'm a business</a>
+            </li>
+            <li>
+              <a href="/contact" class="paragraphSpec-4">Contact us</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
     </div>
-  </section>
 
-  <div class="footer-wrap block-wap">
+    <section class="hero">
+      <div class="block-child-wrap">
+        <h1 class="hero__title">There's nothing here.</h1>
+      </div>
+    </section>
+
+    <section class="error">
+      <h2 class="error__title">Sorry</h2>
+      <p class="error__text">
+        The page you're looking for does not exist.<br />
+        Please click
+        <a href="javascript:history.back()" class="error__back-link">here</a> to
+        return to the previous page.
+      </p>
+      <ul class="error__list">
+        <li class="error__item"><a href="/" class="error__link">Home</a></li>
+        <li class="error__item">
+          <a href="/works" class="error__link">How It Works</a>
+        </li>
+        <li class="error__item">
+          <a href="/business" class="error__link">I'm a business</a>
+        </li>
+        <li class="error__item">
+          <a href="/contact" class="error__link">Contact us</a>
+        </li>
+      </ul>
+    </section>
+
+    <div class="footer-wrap block-wap">
       <footer class="footer block-child-wrap">
         <nav class="nav-footer">
           <ul class="footer-nav-list">
@@ -143,25 +187,36 @@
           </ul>
         </nav>
         <a href="/">
-          <img src="./images/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
+          <img
+            src="./images/logo-footer.svg"
+            loading="lazy"
+            alt="Openpay Logo"
+            class="footer-logo"
+          />
         </a>
         <p class="copyright">
           © 2019 Openpay
         </p>
         <p class="copyright__text">
-          Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered office at 49 Greek St, London, United Kingdom, W1D4EG
+          Openpay UK Limited is a company registered in England and Wales
+          (Company Number 11422596) with it's registered office at 49 Greek St,
+          London, United Kingdom, W1D4EG
         </p>
       </footer>
     </div>
 
-  <div class="cookie-popup">
-    We uses cookies to give you the best browsing experience.
-    <a href="./docs/cookie-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
-    or adjust your settings.
-    <button class="cookie-popup__button">Accept</button>
-  </div>
+    <div class="cookie-popup">
+      We uses cookies to give you the best browsing experience.
+      <a
+        href="./docs/cookie-policy.pdf"
+        class="cookie-popup__link"
+        target="_blank"
+        >Find out more</a
+      >
+      or adjust your settings.
+      <button class="cookie-popup__button">Accept</button>
+    </div>
 
-  <script defer src="./scripts/main.min.js"></script>
-</body>
-
+    <script defer src="./scripts/main.min.js"></script>
+  </body>
 </html>
