--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <title>Openpay Welcome</title>
   <meta name="description" content="Openpay Welcome to a smarter way to pay" />
   <meta property="og:image" content="https://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg" />
-  <script src="scripts/pageRedirect.js"></script>
+  <!-- <script src="scripts/pageRedirect.js"></script> -->
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
