fix back button

--- a/src/error.html
+++ b/src/error.html
@@ -102,7 +102,7 @@
       <p class="error__text">
         The page you're looking for does not exist.<br />
         Please click
-        <a href="javascript:history.back()" class="error__back-link">here</a> to
+        <a href="javascript:history.go(-2)" class="error__back-link">here</a> to
         return to the previous page.
       </p>
       <ul class="error__list">
