add back possibility on the error page

--- a/src/error.html
+++ b/src/error.html
@@ -53,6 +53,8 @@
             .fail(function () {
               window.location = url.substr(0, url.lastIndexOf('/')) + '/error';
             });
+        } else {
+          window.history.back();
         }
       }
     </script>
