--- a/src/faq.html
+++ b/src/faq.html
@@ -113,30 +113,37 @@
         </header>
     </div>
 
+    <section class="hero">
+        <div class="block-child-wrap">
+            <h1 class="hero__title">FAQ's</h1>
+        </div>
+    </section>
 
     <section class="faq" id="faq">
         <div class="faq__wrapper">
-            <h1>Frequently Asked Questions</h1>
-            <p>
-                Browse our categories to help answer the questions you have.
-            </p>
-            <ul class="link-list">
-                <li>
-                    <a class="faq-link" href="#general">General</a>
-                </li>
-                <li>
-                    <a class="faq-link" href="#using-openpay">Using Openpay</a>
-                </li>
-                <li>
-                    <a class="faq-link" href="#payments">Payments</a>
-                </li>
-                <li>
-                    <a class="faq-link" href="#fees">Fees</a>
-                </li>
-                <li>
-                    <a class="faq-link" href="#returns">Returns</a>
-                </li>
-            </ul>
+            <div class="faq-header">
+                <h1>Frequently Asked Questions</h1>
+                <p>
+                    Browse our categories to help answer the questions you have.
+                </p>
+                <ul class="link-list">
+                    <li>
+                        <a class="faq-link" href="#general">General</a>
+                    </li>
+                    <li>
+                        <a class="faq-link" href="#using-openpay">Using Openpay</a>
+                    </li>
+                    <li>
+                        <a class="faq-link" href="#payments">Payments</a>
+                    </li>
+                    <li>
+                        <a class="faq-link" href="#fees">Fees</a>
+                    </li>
+                    <li>
+                        <a class="faq-link" href="#returns">Returns</a>
+                    </li>
+                </ul>
+            </div>
             <div class="faq-section" id="general">
                 <h2>General</h2>
                 <div class="faq-qa">
@@ -289,7 +296,8 @@
                     </p>
                     <p>
                         If you want to make a payment before a scheduled payment due date, you can make a payment
-                        through your account or call customer support on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> to process a payment.
+                        through your account or call customer support on <a href="tel:0800 193 0553"
+                            class="faq-link">0800 193 0553</a> to process a payment.
                     </p>
 
                 </div>
@@ -308,8 +316,10 @@
                         How do I update my card details?
                     </h3>
                     <p>
-                        You can update your card details through your Openpay account. If you’d rather talk to our team, you
-                        can contact us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> during business hours (Monday to Friday, 9am-5.30pm GMT).
+                        You can update your card details through your Openpay account. If you’d rather talk to our team,
+                        you
+                        can contact us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> during business
+                        hours (Monday to Friday, 9am-5.30pm GMT).
                     </p>
                     <p>
                         If your card is lost or stolen, please update your details or get in touch to arrange a payment
@@ -328,7 +338,8 @@
                     </h3>
                     <p>
                         Yes, early payments can be made via your account or with our customer service team by calling
-                        customer support on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a>. There is no charge for paying early.
+                        customer support on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a>. There is no
+                        charge for paying early.
                     </p>
                 </div>
                 <div class="faq-qa">
@@ -358,8 +369,10 @@
                     </h3>
                     <p>
                         We want to ensure that you’re able to make your repayments. Don’t wait until a payment fails,
-                        helping you with your budgeting is important to us. Reach out to us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via
-                        email to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> and we will discuss what we can do to assist you.
+                        helping you with your budgeting is important to us. Reach out to us on <a
+                            href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via
+                        email to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a>
+                        and we will discuss what we can do to assist you.
                     </p>
 
                 </div>
@@ -368,7 +381,9 @@
                         I missed a payment, what should I do?
                     </h3>
                     <p>
-                        Reach out to us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via email to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> and we will discuss
+                        Reach out to us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via email
+                        to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> and we
+                        will discuss
                         what we can do to assist you.
                     </p>
 
@@ -426,7 +441,9 @@
                         Ways to contact us
                     </h3>
                     <p>
-                        Email us on <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> or call us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a>.
+                        Email us on <a href="mailto:support@myopenpay.co.uk"
+                            class="faq-link">support@myopenpay.co.uk</a> or call us on <a href="tel:0800 193 0553"
+                            class="faq-link">0800 193 0553</a>.
                     </p>
 
                 </div>
