rename css files

--- a/src/faq.html
+++ b/src/faq.html
@@ -78,7 +78,7 @@
             g.clearUserCookie = function () {};
         })(window, document, window["_fs_namespace"], "script", "user");
     </script>
-    <link rel="stylesheet" href="./css/faq_uk.css" />
+    <link rel="stylesheet" href="./css/faq.css" />
 </head>
 
 <body>
