--- a/src/error.html
+++ b/src/error.html
@@ -26,7 +26,7 @@
       content="Openpay Welcome to a smarter way to pay"
     />
 
-    <link rel="stylesheet" href="./css/error_uk.css?20190517" />
+    <link rel="stylesheet" href="./css/error.css?20190517" />
   </head>
 
   <body>
