--- a/src/legal.html
+++ b/src/legal.html
@@ -78,7 +78,7 @@
       g.clearUserCookie = function () {};
     })(window, document, window['_fs_namespace'], 'script', 'user');
   </script>
-  <link rel="stylesheet" href="./css/legal_uk.css?20190517" />
+  <link rel="stylesheet" href="./css/legal.css?20190517" />
 </head>
 
 <body>
