--- a/src/works.html
+++ b/src/works.html
@@ -77,7 +77,7 @@
       g.clearUserCookie = function () {};
     })(window, document, window["_fs_namespace"], "script", "user");
   </script>
-  <link rel="stylesheet" href="./css/works_uk.css?20190517" />
+  <link rel="stylesheet" href="./css/works.css?20190517" />
 </head>
 
 <body>
