delete unused img and separate img into folders

--- a/src/error.html
+++ b/src/error.html
@@ -35,7 +35,7 @@
         <div class="header-logo-and-trigger">
           <a href="/" class="logo-link">
             <img
-              src="./images/logo-black.svg"
+              src="./images/general/logo-black.svg"
               alt="Openpay Logo"
               class="logo"
             />
@@ -109,7 +109,7 @@
         </nav>
         <a href="/">
           <img
-            src="./images/logo-footer.svg"
+            src="./images/general/logo-footer.svg"
             loading="lazy"
             alt="Openpay Logo"
             class="footer-logo"
