--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
     <header class="header block-child-wrap">
       <div class="header-logo-and-trigger">
         <a href="/" class="logo-link">
-          <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
+          <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
         </a>
         <div class="trigger-menu">
           <div class="trigger-menu__line"></div>
@@ -131,7 +131,7 @@
             has now landed in the UK.
           </p>
           <div class="dress-container">
-            <img class="dress-img" src="./images/dress.svg" alt="Dress Icon" loading="lazy"/>
+            <img class="dress-img" src="./images/home/dress.svg" alt="Dress Icon" loading="lazy"/>
           </div>
         </div>
       </div>
@@ -152,21 +152,21 @@
         <br>
         <div class="block_howItWorks_flex">
           <div class="block_howItWorks">
-            <img src="images/cup.svg" alt="Cup Icon" loading="lazy"/>
+            <img src="images/home/cup.svg" alt="Cup Icon" loading="lazy"/>
             <h3 class="block_howItWorks_title">Sign up.</h3>
             <p class="block_howItWorks_text">
               Sign up in less than 90 seconds with a few<br>simple details.
             </p>
           </div>
           <div class="block_howItWorks">
-            <img src="images/sneakers.svg" alt="Sneakers Icon" loading="lazy"/>
+            <img src="images/home/sneakers.svg" alt="Sneakers Icon" loading="lazy"/>
             <h3 class="block_howItWorks_title">Shop now.</h3>
             <p class="block_howItWorks_text">
               With any of our trusted retailer partners online<br>and in-store.
             </p>
           </div>
           <div class="block_howItWorks">
-            <img src="images/airplane.svg" alt="Airplane Icon" loading="lazy"/>
+            <img src="images/home/airplane.svg" alt="Airplane Icon" loading="lazy"/>
             <h3 class="block_howItWorks_title">Pay smarter.</h3>
             <p class="block_howItWorks_text">
               Pay your plan off in equal, monthly instalments, starting today.
@@ -238,7 +238,7 @@
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
+        <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
       </a>
       <p class="copyright">
         © 2019 Openpay
