--- a/src/works.html
+++ b/src/works.html
@@ -89,7 +89,7 @@
     <header class="header block-child-wrap">
       <div class="header-logo-and-trigger">
         <a href="/" class="logo-link">
-          <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
+          <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
         </a>
         <div class="trigger-menu">
           <div class="trigger-menu__line"></div>
@@ -237,7 +237,7 @@
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
+        <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
       </a>
       <p class="copyright">
         © 2019 Openpay
