--- a/src/business.html
+++ b/src/business.html
@@ -90,7 +90,7 @@
     <header class="header block-child-wrap">
       <div class="header-logo-and-trigger">
         <a href="/" class="logo-link">
-          <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
+          <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
         </a>
         <div class="trigger-menu">
           <div class="trigger-menu__line"></div>
@@ -147,7 +147,7 @@
         What can we do for you?
       </h2>
       <div class="whatCanWeDo-item">
-        <img src="./images/cart.svg" alt="basket" class="whatCanWeDo-item__icon" loading="lazy" />
+        <img src="./images/business/cart.svg" alt="Basket Icon" class="whatCanWeDo-item__icon" loading="lazy" />
         <h3 class="whatCanWeDo-item-title">
           Increase basket size.
         </h3>
@@ -158,7 +158,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item">
-        <img src="./images/incrise.svg" alt="schedule" class="whatCanWeDo-item__icon" loading="lazy" />
+        <img src="./images/business/graph.svg" alt="Graph Icon" class="whatCanWeDo-item__icon" loading="lazy" />
         <h3 class="whatCanWeDo-item-title">
           Increase customer loyalty.
         </h3>
@@ -170,7 +170,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item">
-        <img src="./images/lock.svg" alt="castle" class="whatCanWeDo-item__icon" loading="lazy" />
+        <img src="./images/business/lock.svg" alt="Lock Icon" class="whatCanWeDo-item__icon" loading="lazy" />
         <h3 class="whatCanWeDo-item-title">
           Provide a risk free, secure solution.
         </h3>
@@ -186,7 +186,7 @@
         What can we do for your<br>customers?
       </h2>
       <div class="whatCanWeDo-item">
-        <img src="./images/shop.svg" alt="basket" class="whatCanWeDo-item__icon" loading="lazy" />
+        <img src="./images/business/shop.svg" alt="Shop Icon" class="whatCanWeDo-item__icon" loading="lazy" />
         <h3 class="whatCanWeDo-item-title">
           A smarter way to pay.
         </h3>
@@ -197,7 +197,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item">
-        <img src="./images/group.svg" alt="community" class="whatCanWeDo-item__icon" loading="lazy" />
+        <img src="./images/business/community.svg" alt="Community Icon" class="whatCanWeDo-item__icon" loading="lazy" />
         <h3 class="whatCanWeDo-item-title">
           Open & transparent transactions.
         </h3>
@@ -209,7 +209,7 @@
         </p>
       </div>
       <div class="whatCanWeDo-item whatCanWeDo-item--last">
-        <img src="./images/confirm.svg" alt="handshake" class="whatCanWeDo-item__icon" loading="lazy" />
+        <img src="./images/business/confirm.svg" alt="Handshake Icon" class="whatCanWeDo-item__icon" loading="lazy" />
         <h3 class="whatCanWeDo-item-title">
           Fulfilling orders, not fantasies.
         </h3>
@@ -256,7 +256,7 @@
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
+        <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
       </a>
       <p class="copyright">
         © 2019 Openpay
