--- a/src/faq.html
+++ b/src/faq.html
@@ -90,7 +90,7 @@
         <header class="header block-child-wrap">
             <div class="header-logo-and-trigger">
                 <a href="/" class="logo-link">
-                    <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
+                    <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="logo" />
                 </a>
                 <div class="trigger-menu">
                     <div class="trigger-menu__line"></div>
@@ -503,7 +503,7 @@
                 </ul>
             </nav>
             <a href="/">
-                <img src="./images/logo-footer.svg" alt="Openpay Logo" loading="lazy" class="footer-logo" />
+                <img src="./images/general/logo-footer.svg" alt="Openpay Logo" loading="lazy" class="footer-logo" />
             </a>
             <p class="copyright">
                 © 2019 Openpay
