--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -84,7 +84,7 @@
 <body>
   <div class="welcome-wrap block-wap">
     <div class="welcome block-child-wrap">
-      <img src="./images/logo-black.svg" alt="Openpay Logo" class="welcome-logo" />
+      <img src="./images/general/logo-black.svg" alt="Openpay Logo" class="welcome-logo" />
       <h1 class="welcome-title">
         Welcome to a<br>smarter way to pay.
       </h1>
@@ -126,7 +126,7 @@
       </h2>
       <div class="work-list">
         <div class="work-item">
-          <img src="./images/Path%204496.svg" alt="sign in" class="work-item__icon work-item__icon_1" />
+          <img src="./images/landingpage/cup.svg" alt="Cup Icon" class="work-item__icon work-item__icon_1" />
           <h3 class="work-item__title">
             Sign up.
           </h3>
@@ -135,7 +135,7 @@
           </p>
         </div>
         <div class="work-item">
-          <img src="./images/Path%204497.svg" alt="shop" class="work-item__icon work-item__icon_2" />
+          <img src="./images/landingpage/sneakers.svg" alt="Sneakers Icon" class="work-item__icon work-item__icon_2" />
           <h3 class="work-item__title">
             Shop now.
           </h3>
@@ -144,7 +144,7 @@
           </p>
         </div>
         <div class="work-item">
-          <img src="./images/Group%201428.svg" alt="simple" class="work-item__icon work-item__icon_3" />
+          <img src="./images/landingpage/airplane.svg" alt="Airplane Icon" class="work-item__icon work-item__icon_3" />
           <h3 class="work-item__title">
             Pay smarter.
           </h3>
