updated document links

--- a/src/faq.html
+++ b/src/faq.html
@@ -226,7 +226,7 @@
                             Absolutely. All sensitive information is encrypted, and we maintain stringent precautionary
                             measures
                             to protect your information.
-                            Our <a href="./legal" class="faq-link" target="_blank">privacy
+                            Our <a href="./docs/privacy-policy.pdf" class="faq-link" target="_blank">privacy
                                 policy</a> can be viewed here.
                         </p>
                     </div>
@@ -264,7 +264,7 @@
                             card
                             you want payments to be taken from, and a phone number. All cards used need to be in your
                             name.
-                            See our <a href="./legal" class="faq-link">terms and conditions</a> for more detail.</p>
+                            See our <a href="./docs/terms-conditions.pdf" class="faq-link">terms and conditions</a> for more detail.</p>
 
                     </div>
                     <div class="faq-qa">
@@ -306,7 +306,7 @@
                             Yes. Security is a top priority for Openpay. All of your personal data is carefully
                             protected and confidential, and we will never sell or misuse the information you’ve
                             entrusted us with. For more information, you can read our ­<a class="faq-link"
-                                href="./legal" target="_blank">privacy policy</a>.
+                                href="./docs/privacy-policy.pdf" target="_blank">privacy policy</a>.
                         </p>
 
                     </div>
