add target blank attribute for the T&C link

--- a/src/faq.html
+++ b/src/faq.html
@@ -264,7 +264,7 @@
                             card
                             you want payments to be taken from, and a phone number. All cards used need to be in your
                             name.
-                            See our <a href="./docs/terms-conditions.pdf" class="faq-link">terms and conditions</a> for more detail.</p>
+                            See our <a href="./docs/terms-conditions.pdf" class="faq-link" target="_blank">terms and conditions</a> for more detail.</p>
 
                     </div>
                     <div class="faq-qa">
