--- a/src/works.html
+++ b/src/works.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Openpay How it works</title>
-  <meta name="description" content="Openpay Welcome to a smarter way to pay" /> <!-- Google Tag Manager -->
+  <meta name="description" content="Openpay Welcome to a smarter way to pay" /> 
+  <meta property="og:image" content="https://www.myopenpay.co.uk/images/works/works.jpg" />
+  <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || [];
