--- a/src/faq.html
+++ b/src/faq.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay FAQ</title>
     <meta name="description" content="Openpay Welcome to a smarter way to pay" />
+    <meta property="og:image" content="https://www.myopenpay.co.uk/images/faq/faq_bg.jpg" />
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
