add font-weight variables, update Contact styles

--- a/src/contact.html
+++ b/src/contact.html
@@ -96,15 +96,13 @@
           <a href="tel:0800 193 0553" class="contact__link">0800 193 0553</a>
         </div>
       </div>
-      <div class="contact__text-media">
-        <h4>For media enquiries please contact Brands2Life </h4>
+      <div class="contact__media">
+        <h4 class="contact__media-title">For media enquiries please contact Brands2Life </h4>
         <p>
-          <a href="mailto: openpay@brands2life.com">
-            <u> openpay@brands2life.com</u>
-          </a>
-          or
+          <a class="contact__media-link" href="mailto: openpay@brands2life.com">openpay@brands2life.com</a>
+          or phone
           <a href="tel: +44 020 7592 1200">
-            phone +44 (0)020 7592 1200.
+            +44 (0)020 7592 1200.
           </a>
         </p>
       </div>
