update home page and add css variables

--- a/src/business.html
+++ b/src/business.html
@@ -63,7 +63,7 @@
 
   <div class="introduction-wrap block-wap">
     <div class="introduction block-child-wrap">
-      <h1 class="introduction-desc">
+      <h1 class="introduction__title">
         Open your eyes to a<br>smarter way to pay.
       </h1>
     </div>
