--- a/src/faq.html
+++ b/src/faq.html
@@ -64,16 +64,14 @@
     </div>
 
     <section class="hero">
-        <div class="block-child-wrap">
-            <h1 class="hero__title">FAQ's</h1>
-        </div>
+        <h1 class="hero__title">FAQ's</h1>
     </section>
 
-    <section class="faq" id="faq">
+    <section class="faq">
         <div class="faq__wrapper">
             <div class="faq-header">
-                <h1>Frequently Asked Questions</h1>
-                <p>
+                <h2 class="faq-title">Frequently Asked Questions</h2>
+                <p class="faq-descr">
                     Browse our categories to help answer the questions you have.
                 </p>
                 <ul class="link-list">
@@ -274,8 +272,7 @@
                         </p>
                         <p>
                             If you want to make a payment before a scheduled payment due date, you can make a payment
-                            through your account or call customer support on <a href="tel:0800 193 0553"
-                                class="faq-link">0800 193 0553</a> to process a payment.
+                            through your account or call customer support on <a href="tel:0800 193 0553">0800 193 0553</a> to process a payment.
                         </p>
 
                     </div>
@@ -298,7 +295,7 @@
                             You can update your card details through your Openpay account. If you’d rather talk to our
                             team,
                             you
-                            can contact us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> during
+                            can contact us on <a href="tel:0800 193 0553">0800 193 0553</a> during
                             business
                             hours (Monday to Friday, 9am-5.30pm GMT).
                         </p>
@@ -321,7 +318,7 @@
                         <p>
                             Yes, early payments can be made via your account or with our customer service team by
                             calling
-                            customer support on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a>. There is
+                            customer support on <a href="tel:0800 193 0553">0800 193 0553</a>. There is
                             no
                             charge for paying early.
                         </p>
@@ -356,7 +353,7 @@
                             We want to ensure that you’re able to make your repayments. Don’t wait until a payment
                             fails,
                             helping you with your budgeting is important to us. Reach out to us on <a
-                                href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via
+                                href="tel:0800 193 0553">0800 193 0553</a> or via
                             email to <a href="mailto:support@myopenpay.co.uk"
                                 class="faq-link">support@myopenpay.co.uk</a>
                             and we will discuss what we can do to assist you.
@@ -368,7 +365,7 @@
                             I missed a payment, what should I do?
                         </h3>
                         <p>
-                            Reach out to us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via
+                            Reach out to us on <a href="tel:0800 193 0553">0800 193 0553</a> or via
                             email
                             to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> and
                             we
@@ -445,8 +442,7 @@
                         </h3>
                         <p>
                             Email us on <a href="mailto:support@myopenpay.co.uk"
-                                class="faq-link">support@myopenpay.co.uk</a> or call us on <a href="tel:0800 193 0553"
-                                class="faq-link">0800 193 0553</a>.
+                                class="faq-link">support@myopenpay.co.uk</a> or call us on <a href="tel:0800 193 0553">0800 193 0553</a>.
                         </p>
 
                     </div>
