--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,9 @@
   </div>
 
   <div class="banner-wrap block-wap">
-    <div class="banner block-child-wrap">
+    <div class="banner">
       <div class="banner-content">
-        <h1>Welcome to a<br />smarter way to pay.</h1>
+        <h1 class="banner__title">Welcome to a<br />smarter way to pay.</h1>
       </div>
     </div>
   </div>
@@ -95,35 +95,32 @@
   </div>
 
   <div class="howItWorks block-wap">
-    <div class="block-child-wrap">
       <section class="howItWorks-content">
         <h2 class="howItWorks-title">How Openpay works</h2>
-        <br>
         <div class="block_howItWorks_flex">
           <div class="block_howItWorks">
-            <img src="images/home/cup.svg" alt="Cup Icon" loading="lazy"/>
-            <h3 class="block_howItWorks_title">Sign up.</h3>
+            <img src="images/home/dress-icon.svg" alt="Dress Icon" loading="lazy"/>
+            <h3 class="block_howItWorks_title">1. Shop online</h3>
             <p class="block_howItWorks_text">
-              Sign up in less than 90 seconds with a few<br>simple details.
+              Look for the Openpay logo on your favourite online retailers.<br>Choose Openpay at the checkout.
             </p>
           </div>
           <div class="block_howItWorks">
-            <img src="images/home/sneakers.svg" alt="Sneakers Icon" loading="lazy"/>
-            <h3 class="block_howItWorks_title">Shop now.</h3>
+            <img src="images/home/phone.svg" alt="Phone Icon" class="block_howItWorks__phone-img" loading="lazy"/>
+            <h3 class="block_howItWorks_title">2. Sign up</h3>
             <p class="block_howItWorks_text">
-              With any of our trusted retailer partners online<br>and in-store.
+              Get approved by Openpay<br>in just 90 seconds with<br>ID and a soft credit check.
             </p>
           </div>
           <div class="block_howItWorks">
-            <img src="images/home/airplane.svg" alt="Airplane Icon" loading="lazy"/>
-            <h3 class="block_howItWorks_title">Pay smarter.</h3>
+            <img src="images/home/calendar.svg" alt="Calendar Icon" class="block_howItWorks__calendar-img" loading="lazy"/>
+            <h3 class="block_howItWorks_title">3. Select your plan</h3>
             <p class="block_howItWorks_text">
-              Pay your plan off in equal, monthly instalments, starting today.
+              Choose between a two or three month plan, and make your first payment today.
             </p>
           </div>
         </div>
       </section>
-    </div>
   </div>
 
   <div class="feedback-wrap block-wap">
