Changed the email

--- a/src/contact.html
+++ b/src/contact.html
@@ -81,7 +81,7 @@
             For non-urgent and general help, contact us by email and we’ll get
             back to you promptly.
           </p>
-          <a href="mailto:info@myopenpay.co.uk" class="contact__link">info@myopenpay.co.uk</a>
+          <a href="mailto:support@myopenpay.co.uk " class="contact__link">support@myopenpay.co.uk </a>
         </div>
 
         <div class="contact__phone">
@@ -89,11 +89,11 @@
             <img src="./images/contact/phone.svg" alt="Phone Icon" class="contact__img" />
           </div>
           <h3 class="contact__subtitle">Call us.</h3>
-          <p class="contact__text">
-            If you need urgent assistance, contact one of our friendly support
-            staff to assist you.
+          <p class="contact__text">If you need urgent assistance, contact one of our friendly support staff to assist
+            you.
           </p>
           <a href="tel:0800 193 0553" class="contact__link">0800 193 0553</a>
+          <i> We're available 9am-5:30pm, 7 days a week.</i>
         </div>
       </div>
       <div class="contact__media">
@@ -110,37 +110,38 @@
   </section>
 
   <div class="footer-wrap block-wap">
-      <footer class="footer block-child-wrap">
-        <nav class="nav-footer">
-          <ul class="footer-nav-list">
-            <li>
-              <a href="/works" class="paragraphSpec-3">How it works</a>
-            </li>
-            <li>
-              <a href="/business" class="paragraphSpec-3">I’m a business</a>
-            </li>
-            <li>
-              <a href="/contact" class="paragraphSpec-3">Contact us</a>
-            </li>
-            <li>
-              <a href="/faq" class="paragraphSpec-3">FAQ</a>
-            </li>
-            <li>
-              <a href="./legal" class="paragraphSpec-3">Legal</a>
-            </li>
-          </ul>
-        </nav>
-        <a href="/">
-          <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
-        </a>
-        <p class="copyright">
-          © 2019 Openpay
-        </p>
-        <p class="copyright__text">
-          Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered office at 49 Greek St, London, United Kingdom, W1D4EG
-        </p>
-      </footer>
-    </div>
+    <footer class="footer block-child-wrap">
+      <nav class="nav-footer">
+        <ul class="footer-nav-list">
+          <li>
+            <a href="/works" class="paragraphSpec-3">How it works</a>
+          </li>
+          <li>
+            <a href="/business" class="paragraphSpec-3">I’m a business</a>
+          </li>
+          <li>
+            <a href="/contact" class="paragraphSpec-3">Contact us</a>
+          </li>
+          <li>
+            <a href="/faq" class="paragraphSpec-3">FAQ</a>
+          </li>
+          <li>
+            <a href="./legal" class="paragraphSpec-3">Legal</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="/">
+        <img src="./images/general/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
+      </a>
+      <p class="copyright">
+        © 2019 Openpay
+      </p>
+      <p class="copyright__text">
+        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered
+        office at 49 Greek St, London, United Kingdom, W1D4EG
+      </p>
+    </footer>
+  </div>
 
   <div class="cookie-popup">
     We uses cookies to give you the best browsing experience.
