--- a/src/works.html
+++ b/src/works.html
@@ -147,7 +147,7 @@
           <img src="./images/works/help.svg" alt="Help Icon" class="help__img" loading="lazy" />
         </div>
         <p class="contacts__text">
-          <a href="mailto:info@myopenpay.co.uk" class="help__link">Email us</a>, or give us a call on
+          <a href="mailto:support@myopenpay.co.uk " class="help__link">Email us</a>, or give us a call on
           <a href="tel:0800 193 0553" class="contacts__phone">0800 193 0553</a>.
         </p>
       </div>
