--- a/src/contact.html
+++ b/src/contact.html
@@ -93,7 +93,7 @@
             you.
           </p>
           <a href="tel:0800 193 0553" class="contact__link">0800 193 0553</a>
-          <i> We're available 9am-5:30pm, 7 days a week.</i>
+          <p class="contact__text_subtitle"> We're available 9am-5:30pm, 7 days a week.</p>
         </div>
       </div>
       <div class="contact__media">
